# atlc

./: BUGS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.hardware-info  README.help  README.linux  README.mpi  README.solaris  README.support  README.threads  README.windows  TODO  aclocal.m4  config.h.in  configure  configure.ac  mkinstalldirs  teston
docs/: Makefile.am  Makefile.in  README
docs/html-docs/: BUGS.html  FAQ.html  IMPORTANT.html  Makefile.am  Makefile.in  NEWS.html  accuracy.html  an_example_of_using_design_coupler.html  atlc.1.html  banner.html  bmp.html  building.html  calculate_zodd_and_zeven.html  colours.html  couplers.html  create_bmp_for_circ_in_circ.1.html  create_bmp_for_circ_in_rect.1.html  create_bmp_for_rect_cen_in_rect.1.html  create_bmp_for_rect_cen_in_rect_coupler.1  create_bmp_for_rect_in_rect.1.html  create_bmp_for_stripline_coupler.1.html  create_bmp_for_symmetrical_stripline.1.html  design_coupler.1.html  determine_dimensions_of_couplers.html  errors.html  examples.html  fileformat.html  generate_for_coupler.html  generators.html  index.html  index2.html  installing.html  make-check.html  man-pages.html  options.html  readbin.1.html  rect_in_rect.html  sysdata.1.html  theory.html  todo.html  (+2 more)
docs/html-docs/jpgs/: Makefile.am  Makefile.in
docs/qex-december-1996/: ATLC.C  Makefile.am  Makefile.in  README
docs/theory/: Makefile.am  Makefile.in  README  atlc-theory1.doc  atlc-theory2.doc  ideas-for-gui.sxw
examples/: 100ohm-201h.bmp.txt  100ohm-401h.bmp.txt  100ohm-801h.bmp.txt  200ohm-201h.bmp.txt  200ohm-401h.bmp.txt  200ohm-801h.bmp.txt  25ohm-201h.bmp.txt  25ohm-401h.bmp.txt  400ohm-1551h.bmp.txt  50ohm-401h.bmp.txt  50ohm-801h.bmp.txt  Makefile.am  Makefile.in  bigger_not_in_centre.bmp.txt  coax-500-100.bmp.txt  coax-500-200-Er=100.bmp.txt  coax-500-200.bmp.txt  coax-500-25.bmp.txt  coax-500-400.bmp.txt  coax-500-50.bmp.txt  coax2.bmp.txt  coaxtest.bmp.txt  coaxtest2.bmp.txt  coupler.bmp.txt  create_for_Makefile.am  ground-negative-short.bmp.txt  microstrip_coupler.bmp.txt  multi-dielectric.bmp.txt  not-aliased.bmp.txt  not_in_centre.bmp.txt  offset.bmp.txt  pcb-coupler.bmp.txt  pcb.bmp.txt  test-coupler1.bmp.txt  test-coupler2.bmp.txt  test.bmp.txt  test3.bmp.txt  test4.bmp.txt  test6.bmp.txt  test7.bmp.txt  (+10 more)
m4/: Makefile.am  Makefile.in  README  acx_mpi.m4  gtk.m4
man/: Makefile.am  Makefile.in
man/man1/: Makefile.am  Makefile.in  atlc.1  coax.1  create_bmp_for_circ_in_circ.1  create_bmp_for_circ_in_rect.1  create_bmp_for_microstrip_coupler.1  create_bmp_for_rect_cen_in_rect.1  create_bmp_for_rect_cen_in_rect_coupler.1  create_bmp_for_rect_in_circ.1  create_bmp_for_rect_in_rect.1  create_bmp_for_stripline_coupler.1  create_bmp_for_symmetrical_stripline.1  design_coupler.1  dualcoax.1  find_optimal_dimensions_for_microstrip_coupler.1  readbin.1  sysdata.1
src/: Makefile.am  Makefile.in  README  definitions.h
tests/: 10a-create-lots-of-examples-check-last-one.test  10b-create-lots-of-examples-check-last-one.test  11a-verify-checksum-of-supplied-test-coupler1.bmp.test  11b-verify-checksum-of-created-test-coupler1.Ex.odd.bmp.test  11c-verify-checksum-of-created-test-coupler1.Ey.odd.bmp.test  11d-verify-checksum-of-created-test-coupler1.E.odd.bmp.test  11e-verify-checksum-of-created-test-coupler1.V.odd.bmp.test  11f-verify-checksum-of-created-test-coupler1.U.odd.bmp.test  11g-verify-checksum-of-created-test-coupler1.Er.bmp.test  11h-verify-checksum-of-created-test-coupler1.Ex.even.bmp.test  11i-verify-checksum-of-created-test-coupler1.Ey.even.bmp.test  11j-verify-checksum-of-created-test-coupler1.E.even.bmp.test  11k-verify-checksum-of-created-test-coupler1.U.even.bmp.test  11l-verify-checksum-of-created-test-coupler1.V.even.bmp.test  13a-check_rect_cen_in_rect.test  13b-check_rect_cen_in_rect.test  13d-check_rect_cen_in_rect.test  14a-check-circ-in-rect.test  14b-check-circ-in-rect.test  14c-check-circ-in-rect.test  14d-check-circ-in-rect.test  1a-create_bmp_for_symmetrical_stripline.bmp.test  1b-create_bmp_for_symmetrical_stripline.txt.test  1c-create_bmp_for_symmetrical_stripline.E.bmp.test  1d-create_bmp_for_symmetrical_stripline.Er.bmp.test  1e-create_bmp_for_symmetrical_stripline.Ey.bmp.test  1f-create_bmp_for_symmetrical_stripline.Ex.bmp.test  1g-create_bmp_for_symmetrical_stripline.U.bmp.test  1h-create_bmp_for_symmetrical_stripline.V.bmp.test  1i-create_bmp_for_symmetrical_stripline.E.bin.test  1j-create_bmp_for_symmetrical_stripline.Er.bin.test  1k-create_bmp_for_symmetrical_stripline.Ey.bin.test  1l-create_bmp_for_symmetrical_stripline.Ex.bin.test  1m-create_bmp_for_symmetrical_stripline.U.bin.test  1n-create_bmp_for_symmetrical_stripline.V.bin.test  2a-create_bmp_for_rect_in_rect.bmp.test  2b-create_bmp_for_rect_in_rect.txt.test  2c-create_bmp_for_rect_in_rect.E.bmp.test  2d-create_bmp_for_rect_in_rect.Er.bmp.test  2e-create_bmp_for_rect_in_rect.Ey.bmp.test  (+66 more)
tools/: Makefile.am  Makefile.in  README  remoterun  stoptests
tools/src/: Makefile.am  Makefile.in  README  coax.c  dualcoax.c  get_options.c  locatediff.c  md5.h  myfilelength.c  mymd5sum.c  usage_coax.c
