# This is Makefile.am, which is proceed by automake
#AUTOMAKE_OPTIONS = gnits
ACLOCAL_AMFLAGS = -I m4

SUBDIRS =  . src m4 man docs examples tools tests 

EXTRA_DIST = \
README \
README.help \
README.mpi \
README.solaris \
README.linux \
README.support \
README.threads \
README.windows \
README.hardware-info \
BUGS \
compile \
missing \
teston \
TODO

CLEANFILES = examplestest-coupler2.bmp.txt
DISTCLEANFILES = examplestest-coupler2.bmp.txt tmp/atlc-zero-bytes
