# This is Makefile.am, which is processed by automake

examplesdir = $(datadir)/atlc/examples

examples_DATA= \
100ohm-201h.bmp \
100ohm-201h.bmp.txt \
100ohm-401h.bmp \
100ohm-401h.bmp.txt \
100ohm-801h.bmp \
100ohm-801h.bmp.txt \
200ohm-201h.bmp \
200ohm-201h.bmp.txt \
200ohm-401h.bmp \
200ohm-401h.bmp.txt \
200ohm-801h.bmp \
200ohm-801h.bmp.txt \
25ohm-201h.E.bmp \
25ohm-201h.Er.bmp \
25ohm-201h.Ex.bmp \
25ohm-201h.Ey.bmp \
25ohm-201h.U.bmp \
25ohm-201h.V.bmp \
25ohm-201h.bmp \
25ohm-201h.bmp.txt \
25ohm-401h.bmp \
25ohm-401h.bmp.txt \
25ohm-801h.bmp \
400ohm-1551h.bmp \
400ohm-1551h.bmp.txt \
50ohm-201h.E.bmp \
50ohm-201h.Er.bmp \
50ohm-201h.Ex.bmp \
50ohm-201h.Ey.bmp \
50ohm-201h.U.bmp \
50ohm-201h.V.bmp \
50ohm-201h.bmp \
50ohm-401h.bmp \
50ohm-401h.bmp.txt \
50ohm-801h.bmp \
50ohm-801h.bmp.txt \
aliased.bmp \
an_odd_er.bmp \
bigger_not_in_centre.bmp \
bigger_not_in_centre.bmp.txt \
coax-500-100.bmp \
coax-500-100.bmp.txt \
coax-500-200-Er=100.bmp \
coax-500-200-Er=100.bmp.txt \
coax-500-200.E.bmp \
coax-500-200.Er.bmp \
coax-500-200.Ex.bmp \
coax-500-200.Ey.bmp \
coax-500-200.U.bmp \
coax-500-200.V.bmp \
coax-500-200.bmp \
coax-500-200.bmp.txt \
coax-500-25.bmp \
coax-500-25.bmp.txt \
coax-500-400.bmp \
coax-500-400.bmp.txt \
coax-500-50.bmp \
coax-500-50.bmp.txt \
coax2.E.bmp \
coax2.Er.bmp \
coax2.Ex.bmp \
coax2.Ey.bmp \
coax2.U.bmp \
coax2.V.bmp \
coax2.bmp \
coax2.bmp.txt \
coaxtest.bmp \
coaxtest.bmp.txt \
coaxtest2.bmp \
coaxtest2.bmp.txt \
coupler.bmp \
coupler.bmp.txt \
create_for_Makefile.am \
cvsignore \
dual-dielectric-coax.bmp \
ground-negative-short.bmp \
ground-negative-short.bmp.txt \
microstrip_coupler.bmp \
microstrip_coupler.bmp.txt \
multi-dielectric.bmp \
multi-dielectric.bmp.txt \
not-aliased.bmp \
not-aliased.bmp.txt \
not_in_centre.bmp \
not_in_centre.bmp.txt \
odd-coupler.bmp \
off-centre-coax.bmp \
offset.bmp \
offset.bmp.txt \
pcb-coupler.bmp \
pcb-coupler.bmp.txt \
pcb.bmp \
pcb.bmp.txt \
positive-ground-short.bmp \
positive-negative-short.bmp \
test-coupler1.E.even.bmp \
test-coupler1.E.odd.bmp \
test-coupler1.Er.bmp \
test-coupler1.Ex.even.bmp \
test-coupler1.Ex.odd.bmp \
test-coupler1.Ey.even.bmp \
test-coupler1.Ey.odd.bmp \
test-coupler1.U.even.bmp \
test-coupler1.U.odd.bmp \
test-coupler1.V.even.bmp \
test-coupler1.V.odd.bmp \
test-coupler1.bmp \
test-coupler1.bmp.txt \
test-coupler2.E.even.bmp \
test-coupler2.E.odd.bmp \
test-coupler2.Er.bmp \
test-coupler2.Ex.even.bmp \
test-coupler2.Ex.odd.bmp \
test-coupler2.Ey.even.bmp \
test-coupler2.Ey.odd.bmp \
test-coupler2.U.even.bmp \
test-coupler2.U.odd.bmp \
test-coupler2.V.even.bmp \
test-coupler2.V.odd.bmp \
test-coupler2.bmp \
test-coupler2.bmp.txt \
test.E.bmp \
test.Er.bmp \
test.Ex.bmp \
test.Ey.bmp \
test.U.bmp \
test.V.bmp \
test.bmp \
test.bmp.txt \
test3.bmp \
test3.bmp.txt \
test4.bmp \
test4.bmp.txt \
test5.bmp \
test6.bmp \
test6.bmp.txt \
test7.bmp \
test7.bmp.txt \
test_rect_in_rect.E.bmp \
test_rect_in_rect.Er.bmp \
test_rect_in_rect.Ex.bmp \
test_rect_in_rect.Ey.bmp \
test_rect_in_rect.U.bmp \
test_rect_in_rect.V.bmp \
test_rect_in_rect.bmp \
test_rect_in_rect.bmp.txt \
test_stripline_coupler.E.even.bmp \
test_stripline_coupler.E.odd.bmp \
test_stripline_coupler.Er.bmp \
test_stripline_coupler.Ex.even.bmp \
test_stripline_coupler.Ex.odd.bmp \
test_stripline_coupler.Ey.even.bmp \
test_stripline_coupler.Ey.odd.bmp \
test_stripline_coupler.U.even.bmp \
test_stripline_coupler.U.odd.bmp \
test_stripline_coupler.V.even.bmp \
test_stripline_coupler.V.odd.bmp \
test_stripline_coupler.bmp \
test_stripline_coupler.bmp.txt \
test_stripline_coupler2.bmp \
test_sym_strip.Ex.bmp \
test_sym_strip.U.bmp \
test_sym_strip.V.bmp \
test_sym_strip.bmp \
test_sym_strip.bmp.txt \
twin-wire.bmp \
twin-wire.bmp.txt \
twin-wire2.bmp \
twin-wire2.bmp.txt \
twin-wire3.bmp \
twin-wire3.bmp.txt \
twin-wire4.bmp \
twin-wire4.bmp.txt \
ushape.bmp \
ushape.bmp.txt \
very-odd.bmp \
very-odd.bmp.txt \
wide-9pixel.bmp \
wide-9pixel.bmp.txt 

EXTRA_DIST = $(examples_DATA)
