man_MANS =  \
atlc.1 \
coax.1 \
create_bmp_for_circ_in_circ.1 \
create_bmp_for_circ_in_rect.1 \
create_bmp_for_microstrip_coupler.1 \
create_bmp_for_rect_cen_in_rect.1 \
create_bmp_for_rect_cen_in_rect_coupler.1 \
create_bmp_for_rect_in_circ.1 \
create_bmp_for_rect_in_rect.1 \
create_bmp_for_stripline_coupler.1 \
create_bmp_for_symmetrical_stripline.1 \
design_coupler.1 \
dualcoax.1 \
find_optimal_dimensions_for_microstrip_coupler.1 \
readbin.1 \
sysdata.1
EXTRA_DIST = $(man_MANS)
