## Process this file with automake to produce Makefile.in

bin_PROGRAMS = mymd5sum myfilelength locatediff dualcoax coax
myfilelength_SOURCES = myfilelength.c 
locatediff_SOURCES = locatediff.c
mymd5sum_SOURCES = mymd5sum.c md5.h
dualcoax_SOURCES = dualcoax.c
coax_SOURCES = coax.c get_options.c usage_coax.c
EXTRA_DIST = md5.h 
