# This is Makefile.am, which is proceed by automake

jpgdir=$(datadir)/atlc/docs/html-docs/jpgs

jpg_DATA= 000000.jpg \
home-email.jpg \
0000ff.jpg \
00ff00.jpg \
00ffff.jpg \
1aefb3.jpg \
3dcoup.jpg \
50.jpg \
696969.jpg \
8235ef.jpg \
8e8e8e.jpg \
aliased.jpg \
bc7f60.jpg \
bluefish.jpg \
central.jpg \
centred.jpg \
cir.jpg \
coax2.E.jpg \
coax2.Er.jpg \
coax2.Ex.jpg \
coax2.Ey.jpg \
coax2.U.jpg \
coax2.V.jpg \
coax2.jpg \
coaxial1.jpg \
cop1.jpg \
coupler.jpg \
coupler3.jpg \
coupler4.jpg \
coupler9.jpg \
d5a04d.jpg \
dcdcdc.jpg \
dff788.jpg \
eccentric_coax.jpg \
eccentric_coax2.jpg \
efcc1a.jpg \
elliptical.jpg \
enclosed-microstrip.jpg \
ff0000.jpg \
ff0001.jpg \
ff00ff.jpg \
ffcaca.jpg \
ffff00.jpg \
ffffff.jpg \
full-size.jpg \
ms_coupler.jpg \
multi-dielectric.E.jpg \
multi-dielectric.Er.jpg \
multi-dielectric.Ex.jpg \
multi-dielectric.Ey.jpg \
multi-dielectric.U.jpg \
multi-dielectric.V.jpg \
multi-dielectric.jpg \
not-aliased.jpg \
off-centre.jpg \
off-centre2.jpg \
pcb.E.jpg \
pcb.Er.jpg \
pcb.Ex.jpg \
pcb.Ey.jpg \
pcb.U.jpg \
pcb.V.jpg \
pcb.jpg \
pcb2.jpg \
rect.jpg \
rect2.jpg \
rect9.jpg \
ric.jpg \
symmetrical_strip.jpg \
test.jpg \
too-small.jpg \
twin-wire.E.jpg \
twin-wire.Er.jpg \
twin-wire.Ex.jpg \
twin-wire.Ey.jpg \
twin-wire.U.jpg \
twin-wire.V.jpg \
twin-wire.jpg \
twin-wire2.E.jpg \
twin-wire2.jpg \
ushape.E.jpg \
ushape.Er.jpg \
ushape.Ex.jpg \
ushape.Ey.jpg \
ushape.U.jpg \
ushape.V.jpg \
ushape.jpg \
very-odd-dark.E.jpg \
very-odd-dark.Ex.jpg \
very-odd-dark.Ey.jpg \
very-odd-light.E.jpg \
very-odd-light.Ex.jpg \
very-odd-light.Ey.jpg \
very-odd.E.jpg \
very-odd.Er.jpg \
very-odd.Ex.jpg \
very-odd.Ey.jpg \
very-odd.U.jpg \
very-odd.V.jpg \
very-odd.jpg \
wide.jpg  

EXTRA_DIST = 000000.jpg \
home-email.jpg \
0000ff.jpg \
00ff00.jpg \
00ffff.jpg \
1aefb3.jpg \
3dcoup.jpg \
50.jpg \
696969.jpg \
8235ef.jpg \
8e8e8e.jpg \
aliased.jpg \
bluefish.jpg \
bc7f60.jpg \
central.jpg \
centred.jpg \
cir.jpg \
coax2.E.jpg \
coax2.Er.jpg \
coax2.Ex.jpg \
coax2.Ey.jpg \
coax2.U.jpg \
coax2.V.jpg \
coax2.jpg \
coaxial1.jpg \
cop1.jpg \
coupler.jpg \
coupler3.jpg \
coupler4.jpg \
coupler9.jpg \
d5a04d.jpg \
dcdcdc.jpg \
dff788.jpg \
eccentric_coax.jpg \
eccentric_coax2.jpg \
efcc1a.jpg \
elliptical.jpg \
enclosed-microstrip.jpg \
ff0000.jpg \
ff0001.jpg \
ff00ff.jpg \
ffcaca.jpg \
ffff00.jpg \
ffffff.jpg \
full-size.jpg \
ms_coupler.jpg \
multi-dielectric.E.jpg \
multi-dielectric.Er.jpg \
multi-dielectric.Ex.jpg \
multi-dielectric.Ey.jpg \
multi-dielectric.U.jpg \
multi-dielectric.V.jpg \
multi-dielectric.jpg \
not-aliased.jpg \
off-centre.jpg \
off-centre2.jpg \
pcb.E.jpg \
pcb.Er.jpg \
pcb.Ex.jpg \
pcb.Ey.jpg \
pcb.U.jpg \
pcb.V.jpg \
pcb.jpg \
pcb2.jpg \
rect.jpg \
rect2.jpg \
rect9.jpg \
ric.jpg \
symmetrical_strip.jpg \
test.jpg \
too-small.jpg \
twin-wire.E.jpg \
twin-wire.Er.jpg \
twin-wire.Ex.jpg \
twin-wire.Ey.jpg \
twin-wire.U.jpg \
twin-wire.V.jpg \
twin-wire.jpg \
twin-wire2.E.jpg \
twin-wire2.jpg \
ushape.E.jpg \
ushape.Er.jpg \
ushape.Ex.jpg \
ushape.Ey.jpg \
ushape.U.jpg \
ushape.V.jpg \
ushape.jpg \
very-odd-dark.E.jpg \
very-odd-dark.Ex.jpg \
very-odd-dark.Ey.jpg \
very-odd-light.E.jpg \
very-odd-light.Ex.jpg \
very-odd-light.Ey.jpg \
very-odd.E.jpg \
very-odd.Er.jpg \
very-odd.Ex.jpg \
very-odd.Ey.jpg \
very-odd.U.jpg \
very-odd.V.jpg \
very-odd.jpg \
wide.jpg 
